--- a/CSS- My Site/index.html
+++ b/CSS- My Site/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Firoz alam</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css"
-  </head>
-  <body>
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Firoz alam</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="icon" href="favicon.ico">
+</head>
+<body>
+  <div>
+    <h1>firoz alam</h1>
+    <p>I am software Engg.</p>
+  </div>
+
+</body>
+
 </html>
