--- a/CSS- My Site/index.html
+++ b/CSS- My Site/index.html
@@ -8,11 +8,16 @@
   <link rel="icon" href="favicon.ico">
 </head>
 <body>
-  <div>
+  <div class ="top">
     <h1>firoz alam</h1>
     <p>I am software Engg.</p>
   </div>
+  <div class="middle">
 
+  </div>
+  <div class="bottom">
+
+  </div>
 </body>
 
 </html>
