--- a/CSS- My Site/index.html
+++ b/CSS- My Site/index.html
@@ -7,16 +7,21 @@
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <link rel="icon" href="favicon.ico">
 </head>
+
 <body>
-  <div class ="top">
+  <div class="top-conntainer">
+    <img class = "top-cloud"src="images/cloud.png" alt="cloud-img">
     <h1>firoz alam</h1>
-    <p>I am software Engg.</p>
+    <p>I am <span class="sof">sof</span>tware Engg.</p>
+    <img class = "bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img src="images/mountain.png" alt="mountain-img">
   </div>
 
-  <div class="middle">
+  <div class="middle-conntainer">
 
   </div>
-  <div class="bottom">
+
+  <div class="bottom-conntainer">
 
   </div>
 </body>
