--- a/CSS- My Site/index.html
+++ b/CSS- My Site/index.html
@@ -6,6 +6,8 @@
   <title>Firoz alam</title>
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
 </head>
 
 <body>
