final code finish

--- a/CSS- My Site/index.html
+++ b/CSS- My Site/index.html
@@ -3,29 +3,59 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Firoz alam</title>
+  <title>Firoz Alam</title>
   <link rel="stylesheet" type="text/css" href="css/style.css" />
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="images/favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div class="top-conntainer">
-    <img class = "top-cloud"src="images/cloud.png" alt="cloud-img">
-    <h1>firoz alam</h1>
-    <p>I am <span class="sof">sof</span>tware Engg.</p>
-    <img class = "bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <h1>Firoz Alam</h1>
+    <p class="software">I am <span class="sof">sof</span>tware Engg.</p>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
   </div>
 
-  <div class="middle-conntainer">
-
+  <div class="middle-container">
+    <div class="profile">
+      <img src="images/firoz-cicular-photo.png" alt="firoz-circular-photo" width="150px" height="150px">
+      <h2>Hello.</h2>
+      <p class ="intro"> My name is firoz alam and i am currently in process of learning and teaching web development project.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="skill-row1" src="https://media.giphy.com/media/YFFGUPTPTRqIhwepA4/giphy.gif" alt="skills-gif" width="150px" height="150px">
+        <h3>Design & development</h3>
+        <p>Web development project is the best thing i have ever done in my life.I ❤❤ websites.</p>
+      </div>
+      <div class="skill-row">
+        <img class="skill-row2" src="images/chillies.png" alt="chilli-img" width="150px" height="150px">
+        <h3>what i do?</h3>
+        <p>I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to send</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>If you love to code then reach out to me through mail.</h3>
+      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <a class="btn" href="mailto:nazibul98@gmail.com">CONTACT ME</a>
+    </div>
   </div>
 
-  <div class="bottom-conntainer">
 
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/firoz-alam-8b9034b1/">LinkedIn</a>
+    <a class="footer-link" href="https://github.com/firoz786">GIthub</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <p>© 2018 Firoz Alam.@firoz alam website</p>
   </div>
+
 </body>
 
 </html>
